--- a/CV72CL_1202/köszönet.html
+++ b/CV72CL_1202/köszönet.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Egytál Étterem</title>
+    <title>Étterem Kezdőlap</title>
     <meta charset="UTF-8">
 </head>
    
@@ -18,7 +18,7 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width: 75%;
+            width: 50%;
             margin-bottom: 25px;
         }
 
@@ -84,20 +84,8 @@
             <br><br>
         <section>
 
-            <p style="margin-top: 60px; margin-bottom: 40px; text-align: center;"><b>Üdvözöljük az éttermünk honlapján!</b></p>
+            <p style="margin-top: 60px; margin-bottom: 40px; text-align: center;"><b>Köszönjük a foglalást</b></p>
 
-            <table width="100%">
-                <tr>
-                    <td ><video src="video.mp4" controls width="600"></video></td>
-                </tr>
-            </table>
-
-            <div><b>Forrás:</b></div>
-            <div>https://www.tiktok.com/</div>
-            <br>    
-            <div style="margin-bottom: 100px; font-size: 12px;">Ezt a weblapot kíberbünözés közben készítettem.</div>
-        </section>
-    </div>
 </body>
 </html>
 
