Féléves munka+beadandó a megfelelő mappában

--- a/WebProg&Des_CV72CL/étlap.html
+++ b/WebProg&Des_CV72CL/étlap.html
@@ -87,6 +87,7 @@
                 <tr>
                     <td> <a href="kezdölap.html">Kezdőlap</a></td>
                     <td> <a href="idöpont.html">ídőpont Foglalás</a></td>
+                    <td> <a href="történet.html">Étterrem Története</a></td>
                 </tr>
             </table>
         </header>
